// Copyright (c) Mondoo, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package mondoo.report.cnspec.v1;

option go_package = "go.mondoo.com/cnspec/v10/cli/reporter";

import "cli/reporter/cnquery_report.proto";

message Report {
  map <string, mondoo.report.cnquery.v1.Asset> assets = 1;
  map <string, mondoo.report.cnquery.v1.DataValues> data = 2;
  map <string, string> errors = 3;
  map <string, ScoreValues> scores = 4;
}

message ScoreValues {
  map <string, ScoreValue> values = 1;
}

message ScoreValue {
  uint32 score = 1;
  string status = 2;
}